--- a/Smart Calculator/2+2+/task-info.yaml
+++ b/Smart Calculator/2+2+/task-info.yaml
@@ -138,5 +138,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/42/stages/221/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 31 Mar 2022 19:37:34 UTC
 record: -1
