--- a/Smart Calculator/Count them all/task-info.yaml
+++ b/Smart Calculator/Count them all/task-info.yaml
@@ -164,5 +164,8 @@ files:
     }
   learner_created: false
 feedback_link: https://hyperskill.org/projects/42/stages/222/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Thu, 31 Mar 2022 19:46:41 UTC
 record: -1
