--- a/Smart Calculator/2+2+/task-info.yaml
+++ b/Smart Calculator/2+2+/task-info.yaml
@@ -137,7 +137,7 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/42/stages/221/implement#comment
+feedback_link: https://hyperskill.org/learn/step/5317#comment
 status: Solved
 feedback:
   message: Congratulations!
