--- a/Smart Calculator/Count them all/task-info.yaml
+++ b/Smart Calculator/Count them all/task-info.yaml
@@ -163,9 +163,9 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/42/stages/222/implement#comment
+feedback_link: https://hyperskill.org/learn/step/5318#comment
 status: Solved
 feedback:
   message: Congratulations!
   time: Thu, 31 Mar 2022 19:46:41 UTC
-record: -1
+record: 3
