--- a/Smart Calculator/I’ve got the power/task-info.yaml
+++ b/Smart Calculator/I’ve got the power/task-info.yaml
@@ -235,6 +235,6 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/42/stages/226/implement#comment
+feedback_link: https://hyperskill.org/learn/step/5322#comment
 status: Unchecked
 record: -1
