--- a/Smart Calculator/Variables/task-info.yaml
+++ b/Smart Calculator/Variables/task-info.yaml
@@ -291,6 +291,6 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/42/stages/225/implement#comment
+feedback_link: https://hyperskill.org/learn/step/5321#comment
 status: Unchecked
 record: -1
