--- a/Smart Calculator/2+2/task-info.yaml
+++ b/Smart Calculator/2+2/task-info.yaml
@@ -92,7 +92,7 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/42/stages/220/implement#comment
+feedback_link: https://hyperskill.org/learn/step/5316#comment
 status: Solved
 feedback:
   message: Congratulations!
