--- a/Smart Calculator/Very big/task-info.yaml
+++ b/Smart Calculator/Very big/task-info.yaml
@@ -319,6 +319,6 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/42/stages/227/implement#comment
+feedback_link: https://hyperskill.org/learn/step/5323#comment
 status: Unchecked
 record: -1
