--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/203965/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Thu, 31 Mar 2022 20:36:29 UTC
+update_date: Fri, 01 Apr 2022 03:10:20 UTC
 stages:
 - id: 220
   step: 5316
@@ -16,10 +16,10 @@ stages:
   is_completed: true
 - id: 223
   step: 5319
-  is_completed: false
+  is_completed: true
 - id: 224
   step: 5320
-  is_completed: false
+  is_completed: true
 - id: 225
   step: 5321
   is_completed: false
