--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://stepik.org/media/attachments/lesson/203965/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: Fri, 01 Apr 2022 20:24:29 UTC
+update_date: Sat, 02 Apr 2022 20:33:58 UTC
 stages:
 - id: 220
   step: 5316
@@ -25,10 +25,10 @@ stages:
   is_completed: true
 - id: 226
   step: 5322
-  is_completed: false
+  is_completed: true
 - id: 227
   step: 5323
-  is_completed: false
+  is_completed: true
 topics:
   0:
   - title: Introduction to Java
